# awesome-plugin

./: .gitignore  CMakeLists.txt  ExportOptions.plist
.github/workflows/: ios-build.yaml
HostPluginDemo/: HostPluginDemo.jucer
HostPluginDemo/Builds/LinuxMakefile/: Makefile
HostPluginDemo/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
HostPluginDemo/Builds/MacOSX/HostPluginDemo.xcodeproj/: project.pbxproj
HostPluginDemo/Builds/MacOSX/HostPluginDemo.xcodeproj/project.xcworkspace/xcuserdata/aman.xcuserdatad/: UserInterfaceState.xcuserstate
HostPluginDemo/Builds/MacOSX/HostPluginDemo.xcodeproj/xcuserdata/aman.xcuserdatad/xcschemes/: xcschememanagement.plist
HostPluginDemo/Builds/VisualStudio2022/: HostPluginDemo.sln  HostPluginDemo_SharedCode.vcxproj  HostPluginDemo_SharedCode.vcxproj.filters  HostPluginDemo_StandalonePlugin.vcxproj  HostPluginDemo_VST3.vcxproj  HostPluginDemo_VST3ManifestHelper.vcxproj  resources.rc
HostPluginDemo/Builds/iOS/: Info-Standalone_Plugin.plist  Info.plist  Main.cpp  MainComponent.cpp  MainComponent.h  MenuBarComponent.h  PluginComponents.h  PluginDialogWindow 2.h  PluginDialogWindow.h  PluginEditorComponent.h  PluginScanner.mm  SelectPluginDialog.h  VolumeMeter 2.h
HostPluginDemo/Builds/iOS/HostPluginDemo.xcodeproj/: project.pbxproj
HostPluginDemo/Builds/iOS/HostPluginDemo.xcodeproj/project.xcworkspace/xcuserdata/aman.xcuserdatad/: UserInterfaceState.xcuserstate
HostPluginDemo/Builds/iOS/HostPluginDemo.xcodeproj/xcuserdata/aman.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
HostPluginDemo/Builds/iOS/HostPluginDemo.xcodeproj/xcuserdata/aman.xcuserdatad/xcschemes/: xcschememanagement.plist
HostPluginDemo/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
HostPluginDemo/Source/: Buttons.h  FullScreenView.h  HostPluginDemo.h  Main.cpp  MainComponent.cpp  MainComponent.h  MenuBarComponent.h  PluginComponents.h  PluginDialogWindow.h  PluginEditorComponent.h  PluginLoaderComponent.h  PluginProcessor.h  PluginScanner.mm  SelectPluginDialog.h  VolumeMeter.h
guiApp/: CMakeLists.txt  Info.plist
guiApp/Source/: FileAccessHelper.mm  Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditorComponent.h  VolumeMeter.h
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/headers/myPlugin/: PluginEditor.h  PluginProcessor.h
